# SentinelCell-MAS-Immune-System

./: .coverage  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.ollama.yml  docker-compose.postgres.yml  docker-compose.yml  filebeat.yml  prometheus.yml  pyproject.toml  requirements.txt  schemas.json  setup.sh  simulate.py  skills.yaml
.antigravity/: auto_branching_policy.md  auto_changelog_policy.md  auto_commit_policy.md  auto_pr_merge_policy.md  container_policy.md  instructions.md  project_structure.md  readme_standards.md  system_logs.md  testing.md
ADR/: README.md  adr-001-langgraph-orchestrator.md  adr-002-mcp-registry.md  adr-003-adaptive-learning.md  adr-004-database-agnostic-memory.md  adr-005-agnostic-llm-factory.md  adr-006-event-driven-architecture.md  adr-007-real-time-observability.md  adr-008-testcontainers-integration.md  adr-009-guardian-mode-security-mitigations.md  adr-010-advanced-production-readiness.md  adr-011-final-architecture-maturation.md  adr-012-dynamic-configuration-and-fail-closed.md  adr-013-v2-enterprise-expansion.md  adr-014-v3-mission-critical-architecture.md  adr-015-pluggable-message-broker-architecture.md  adr-016-architectural-maturation-and-observability-integrity.md
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
docs/: README.md  agnostic_logger.md  client_integration.md  deployment_strategies.md  (+8 more)
(+202 files in other folders)
