[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SentinelCell"
version = "0.1.0"
description = "Middleware AI Immune System for Multi-Agent Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.25",
    "langchain-openai>=0.0.8",
    "langchain-anthropic>=0.1.4",
    "langchain-community>=0.0.20",
    "langchain-ollama>=0.1.0",
    "langchain-groq>=0.1.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
